fix: Fix button text overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ h6 {
 /* Game */
 .game-wrapper {
   display: grid;
-  grid-template-columns: 0.3fr 1.5fr 0.5fr;
+  grid-template-columns: 0.3fr 1.5fr 0.7fr;
   background-color: var(--surface);
   border: 2px solid var(--highlight);
   padding: 1rem;
